<resources>

    <string name="app_name">Dagensmiddag</string>
    <string name="frederikke">Frederikke Kafé</string>
    <string name="ifi">Informatikkafeen</string>
    <string name="kafe_ole">Kafé Ole</string>
    <string name="sv_kafeen">SV-kafeen</string>
    
    <string name="menu_update">Update</string>
    <string name="menu_today">Only today</string>
    <string name="title_activity_restaurant">Where do you want to eat?</string>
    <string name="restaurant_hours">Opening hours:</string>
    <string name="food_title">Food of the day:</string>

</resources>